Adding DOI collection tables to hold their specialized info (banners and DOIs)
